Fixed overflow issues

--- a/2- HRMS Landing Page/index.css
+++ b/2- HRMS Landing Page/index.css
@@ -13,6 +13,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #fff;
+  overflow-x: hidden;
 }
 
 .header-container {
@@ -342,14 +343,7 @@ a {
   background-color: #121212;
   padding-top: 2rem;
 }
-.form-wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  padding-inline: 2rem;
-}
+
 .form-headings-container {
   width: 100%;
   display: flex;
@@ -382,6 +376,13 @@ a {
   background-color: #222222;
   padding: 2rem 1rem;
   border-radius: 10px;
+}
+.form-wrapper {
+  width: fit-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
 .inner-form-text {
   display: flex;
@@ -537,6 +538,8 @@ a {
     border-radius: 2rem;
   }
   .hero-section-container {
+    width: 100vw;
+    height: 100vh;
     flex-direction: row;
   }
   .hero-section-container > img {
@@ -581,6 +584,7 @@ a {
     background-position: right top;
   }
   .form-wrapper {
+    width: fit-content;
     flex-direction: row;
     padding-inline: 1rem;
     padding-block: 2rem;
@@ -670,8 +674,8 @@ a {
     width: 40ch;
   }
   #map {
-    width: 300px;
-    height: 150px;
+    width: 450px;
+    height: 200px;
   }
 }
 
@@ -697,12 +701,11 @@ a {
   }
   .footer-container {
     justify-content: space-between;
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 @media (min-width: 1920px) {
   .form-wrapper {
-    width: fit-content;
     justify-content: flex-start;
     align-items: center;
     margin-left: 10rem;
